--- a/index.htm
+++ b/index.htm
@@ -15,7 +15,12 @@
   <main>
     <section class="intro">
       <h2>Why You’re Special ✨</h2>
-      <p>Hosanna, you’re the most beautiful soul I’ve ever met. Your smile, your kindness, your laughter—everything about you inspires me.</p>
+      <p>Bebo ji, you’re the most beautiful soul I’ve ever known. Your smile feels like sunlight after 
+        the longest night, your kindness wraps around me like the warmest embrace, and your laughter is
+        the sweetest melody I could ever hear. Every little detail about you inspires me—your 
+        eyes that hold whole worlds, your voice that feels like home, your presence that makes everything 
+        softer and brighter. With you, even the ordinary becomes extraordinary, and my heart finds a rhythm 
+        it never knew before.</p>
     </section>
 
     <section class="gallery">
@@ -40,4 +45,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
