--- a/index.htm
+++ b/index.htm
@@ -17,7 +17,7 @@
       <h2>Why You’re Special ✨</h2>
       <p>Bebo ji, you’re the most beautiful soul I’ve ever known. Your smile feels like sunlight after 
         the longest night, your kindness wraps around me like the warmest embrace, and your laughter is
-        the sweetest melody I could ever hear. Every little detail about you inspires me—your 
+        the sweetest melody I could ever hear. Every little detail about you inspires me.<br>your 
         eyes that hold whole worlds, your voice that feels like home, your presence that makes everything 
         softer and brighter. With you, even the ordinary becomes extraordinary, and my heart finds a rhythm 
         it never knew before.</p>
@@ -45,5 +45,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
